build: modernize and stabilize for Java 21 - Fixed JAXB import issues with build-helper-maven-plugin - Cleaned up Maven parent references (notably habiTv-windows) - Replaced deprecated Java APIs (newInstance) - Improved file error handling with logging in XMLUserConfig - Fixed generics in MyCheckBoxTreeCell to resolve build errors - All modules compile cleanly on Java 21 - Updated documentation: CHANGELOG.md, README.md, INSTALL.md